--- a/iv_weapAnims/iv_weapAnims.vcxproj
+++ b/iv_weapAnims/iv_weapAnims.vcxproj
@@ -76,7 +76,7 @@
     <TargetExt>.asi</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_preCE|Win32'">
-    <OutDir>X:\Grand Theft Auto Four</OutDir>
+    <OutDir>X:\Grand Theft Auto Liberty City</OutDir>
     <TargetExt>.asi</TargetExt>
     <TargetName>$(ProjectName)_preCE</TargetName>
   </PropertyGroup>
@@ -85,7 +85,7 @@
     <TargetExt>.asi</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_preCE|Win32'">
-    <OutDir>X:\Grand Theft Auto Four</OutDir>
+    <OutDir>X:\Grand Theft Auto Liberty City</OutDir>
     <TargetExt>.asi</TargetExt>
     <TargetName>$(ProjectName)_preCE</TargetName>
   </PropertyGroup>
@@ -151,14 +151,13 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h" />
     <ClInclude Include="hookFns.h" />
-    <ClInclude Include="pch.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="weapAnims.h" />
   </ItemGroup>
   <ItemGroup>
@@ -167,6 +166,9 @@
     <ClCompile Include="Hooking.Patterns-master\Hooking.Patterns.cpp" />
     <ClCompile Include="patch.cpp" />
     <ClCompile Include="weapAnims.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="WeaponAnimations.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
